--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^4.10.1",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
     "connect-mongodb-session": "^3.1.1",
@@ -18,6 +19,7 @@
     "express-session": "^1.17.3",
     "memorystore": "^1.6.7",
     "mongoose": "^6.9.2",
+    "prisma": "^4.10.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
