--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "connect-mongodb-session": "^3.1.1",
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.0",
     "express-session": "^1.17.3",
+    "jsonwebtoken": "^9.0.0",
     "memorystore": "^1.6.7",
     "mongoose": "^6.9.2",
     "prisma": "^4.10.1",
