--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "memorystore": "^1.6.7",
     "mongoose": "^6.9.2",
     "prisma": "^4.10.1",
+    "sharp": "^0.31.3",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
