--- a/package.json
+++ b/package.json
@@ -5,23 +5,22 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "start": "nodemon app.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@prisma/client": "^4.10.1",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
     "connect-mongodb-session": "^3.1.1",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
     "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.0",
     "memorystore": "^1.6.7",
     "mongoose": "^6.9.2",
-    "prisma": "^4.10.1",
     "sharp": "^0.31.3",
     "uuid": "^9.0.0"
   },
